Preserve warning order when importing code style
Set.copyOf gives an unspecified iteration order, silently discarding
the ordering the LinkedHashSet accumulator was chosen to provide.
Wrap it instead so getAdditionalImportInfo joins warnings in config
order, which will matter once more than one distinct warning message
exists.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>